# str1ker

./: .clang-format  .gitignore  99-teensy-robot.rules  CMakeLists.txt  installation.md  notes.txt  package.xml  post_build.sh.in  readme.md  solenoid.txt
action/: Pwm.action
boards/ArmEncoderBoard/: ArmEncoderBoard-pnp_bottom.gbr  ArmEncoderBoard-pnp_top.gbr  ArmEncoderBoard.kicad_pcb  ArmEncoderBoard.kicad_prl  ArmEncoderBoard.kicad_pro  ArmEncoderBoard.kicad_sch  ArmEncoderBoard.kicad_sch_old  ArmEncoderBoardBom.xlsx  fp-info-cache  fp-lib-table  readme.md  sym-lib-table
boards/ArmPowerBoard/: ArmPowerBoard.kicad_pcb  ArmPowerBoard.kicad_prl  ArmPowerBoard.kicad_pro  ArmPowerBoard.kicad_sch
boards/ArmPowerBoardWithControls/: ArmPowerBoard.kicad_pcb  ArmPowerBoard.kicad_prl  ArmPowerBoard.kicad_pro  ArmPowerBoard.kicad_sch  ArmPowerBoard.step
boards/ArmRobotBoardTeensy/: ArmRobotBoardTeensy.kicad_pcb  ArmRobotBoardTeensy.kicad_prl  ArmRobotBoardTeensy.kicad_pro  ArmRobotBoardTeensy.kicad_sch  ArmRobotBoardTeensy.kicad_sch_old  Requirements.md  fp-info-cache  fp-lib-table  freerouting.dsn  readme.md  sym-lib-table  temp-freerouting.dsn
boards/AudioBoardTeensy/: AudioBoardTeensy.kicad_pcb  AudioBoardTeensy.kicad_prl  AudioBoardTeensy.kicad_pro  AudioBoardTeensy.kicad_sch  AudioBoardTeensy.kicad_sch_old  fp-info-cache  fp-lib-table  readme.md  sym-lib-table  todo.txt
boards/LegEncoderBoard/: LegEncoderBoard.kicad_pcb  LegEncoderBoard.kicad_prl  LegEncoderBoard.kicad_pro  LegEncoderBoard.kicad_sch  LegEncoderBoard.kicad_sch_old  fp-info-cache  fp-lib-table  freerouting.dsn  readme.md  sym-lib-table  temp-freerouting.dsn
boards/LegRobotBoardTeensy/: LegRobotBoardTeensy.kicad_pcb  LegRobotBoardTeensy.kicad_prl  LegRobotBoardTeensy.kicad_pro  LegRobotBoardTeensy.kicad_sch  LegRobotBoardTeensy.kicad_sch_old  fp-info-cache  fp-lib-table  readme.md  sym-lib-table
boards/MainRobotBoardTeensy/: MainRobotBoardTeensy.kicad_pcb  MainRobotBoardTeensy.kicad_prl  MainRobotBoardTeensy.kicad_pro  MainRobotBoardTeensy.kicad_sch  MainRobotBoardTeensy.kicad_sch_old  fp-info-cache  fp-lib-table  freerouting.dsn  readme.md  sym-lib-table  temp-freerouting.dsn
cad/: Arm.iam  ArmBackLeft.iam  ArmBackRight.iam  ArmBase.iam  ArmBaseEncoderAlignmentFlange.ipt  ArmBaseEncoderCover.ipt  ArmControlBoard.ipt  ArmControlBoardCover.ipt  ArmController.iam  ArmDriver.iam  ArmDriverBoard.ipt  ArmDriverBoardCover.ipt  ArmFixture.iam  ArmFrontLeft.iam  ArmFrontRight.iam  ArmPower.iam  ArmPowerBoard.ipt  ArmPowerBoardBack.ipt  ArmPowerBoardLarger.ipt  ArmPowerBoardLid.ipt  ArmPowerBoardWithControls.ipt  ArmPowerBoardWithControlsLid.ipt  ArmScapula.ipt  ArmScapulaLong.ipt  ArmScapulaLongMirror.ipt  ArmScapulaMirror.ipt  ArmSolenoid.iam  ArmSolenoidBoundingBox.ipt  ArmWithBase.iam  ArmWithBaseLeft.iam  ArmWithBaseRight.iam  BackLeftTube.iam  BackTube.iam  BaseBoundingBox.ipt  BaseHub.ipt  BatteryMount.ipt  BatterySafetyCap.ipt  BreakerMount.ipt  CameraMount.ipt  ChainTensionerMount.ipt  (+192 more)
cad/Chest/: ANSI 1_2 x 0.147 1702054336438.ipt  ANSI 1_2 x 0.147 1702054336462.ipt  ANSI 1_2 x 0.147 1702054336487.ipt  ANSI 1_2 x 0.147 1702054336518.ipt  ANSI 1_2 x 0.147 1702054336542.ipt  ANSI 1_2 x 0.147 1702054336566.ipt  ANSI 1_2 x 0.147 1702054336590.ipt  ANSI 1_2 x 0.147 1702054336614.ipt  Chest.iam  Frame.iam  (+25 more)
config/: arm.yaml  body.yaml  controllers.yaml  hardware.yaml  solenoids.yaml
description/: _oldrobot.urdf  allocator.xml  controllers.yaml  gazebo-controllers.yaml  ik.xml  inverseKinematicsPlugin.xml  moveItControllerPlugin.xml  planner.xml  robot.urdf  rosControllerPlugin.xml  trajectory.xml  velocity-controllers.yaml
design/: ArduinoMega.dxf  ArmControlBoard.dxf  BackPanelSilk.afdesign  BackPanelSilk.dwg  ChestCover.stl  ChestFinalShape.blend  ChestFrame.stl  ChestFrameDesign.iam  ChestFrameDesign.ipt  ChestPreview.stl  ChestRedoAgain.stl  ControlBoardDesign.ipt  ControllerBoardCover.blend  UpperArmEncoderEdges.dxf  UpperArmEncoderPcb.dxf  actuators.txt  arm fasteners.txt  body-wireframe.ipt  body-wireframe.stl  body.blend  body.psd  body.stl  ctrlh.afdesign  eye-place.ai  facematch.psd  forearm-preview.stl  formulas.txt  homography.txt  moveit.txt  pluggable terminals.txt  power hub switch.afdesign  power-board-large-edges.dxf  power-diagram.afdesign  power-hub-stickers.afdesign  round-eyes.stl  slit-eyes.stl  spinelink-wireframe.stl  tdo part list head proto.txt  torque.txt  upper-arm-preview-backhalf.stl  (+2 more)
doc/: power.md
export/: Forearm.stl  UpperArm.stl
firmware/: library.properties  readme.md
launch/: arms.launch  controllers.launch  gazebo.launch  hardware.launch  laserscan.launch  legs.launch  main.launch  robot.launch  robot_rviz.launch  vision.launch
msg/: Adc.msg  GripperCommand.msg  MainCommand.msg  PositionCommand.msg  PowerState.msg  Pwm.msg  PwmChannel.msg  RawJointSensors.msg  RawStateFeedback.msg  Servo.msg  ServoChannel.msg  StateFeedback.msg  VelocityCommand.msg
parts/: Arm.iam  ArmProto.iam  Chest.ipt  ChestMount.ipt  Drumstick.iam  FaceTubeConnector.ipt  Knee.ipt  Leg.iam  LowerLeg.ipt  Pelvis.iam  Root.ipt  SpineChestCover.ipt  SpineLinkBottom.ipt  SpineLinkRoot.ipt  UpperArm.ipt  UpperArmBracketBase.ipt  inertial.txt
scripts/: alias.sh  demo.sh  workspace.py  workspace.readme.md
src/: Arm.iam  Chest.ipt  ChestShoulderBracket - Copy.ipt  ChestShoulderBracketMirror.ipt  Forearm.ipt  ForearmActuatorConnector.ipt  ForearmGenerativeStl.stl  HeadScaled.ipt  Hip.ipt  HipCoverTop.ipt  Knee.ipt  Leg.iam  LowerLeg.ipt  Pelvis.iam  PelvisWing.ipt  PullSolenoidArmBracket.ipt  Robot.iam  ShoulderBracket.ipt  ShoulderChestBracket.ipt  Spine.ipt  SpineChestConnector.ipt  SpineLinkRoot.ipt  SpineLinkTop.ipt  TorsoMount.ipt  TorsoSpacer.ipt  UpperArm-Quarter-Front.ipt  UpperArm.ipt  UpperArm2.ipt  UpperArmActuatorBracket.ipt  UpperArmActuatorBracketMirror.ipt  UpperArmBracket.ipt  UpperArmBracketBase.ipt  UpperArmBracketMirror.ipt  UpperArmGenerativeStl.stl  UpperArmMount.ipt  UpperArmServoDynamixelXM430-W350-T.ipt  UpperLeg.ipt  UpperLeg2.ipt  UpperShoulderBracket.ipt  analog.ino  (+42 more)
(+690 files in other folders)
