<?xml version="1.0"?>
<package format="2">
  <name>str1ker</name>
  <version>1.0.0</version>
  <description>Str1ker drumming robot</description>
  <maintainer email="valeriy.novytskyy@outlook.com">Valeriy Novytskyy</maintainer>
  <license>GNU GPLv3</license>
  <!-- <url type="website">http://wiki.ros.org/str1ker</url> -->
  <author email="valeriy.novytskyy@outlook.com">Valeriy Novytskyy</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>dynamixel_workbench_msgs</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>cmake_modules</depend>
  <depend>yaml-cpp</depend>
  <depend>eigen</depend>
</package>
