<?xml version="1.0"?>
<package format="2">
  <name>str1ker</name>
  <version>1.0.0</version>
  <description>Str1ker drumming robot</description>
  <maintainer email="valeriy.novytskyy@outlook.com">Valeriy Novytskyy</maintainer>
  <license>GNU GPLv3</license>
  <url type="website">https://www.01binary.us/projects/drumming-robot/</url>
  <author email="valeriy.novytskyy@outlook.com">Valeriy Novytskyy</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>angles</depend>
  <depend>genmsg</depend>
  <depend>std_msgs</depend>
  <depend>dynamixel_workbench_msgs</depend>
  <depend>dynamixel_workbench_toolbox</depend>
  <depend>cmake_modules</depend>
  <depend>yaml-cpp</depend>
  <depend>eigen</depend>
</package>
