<?xml version="1.0"?>
<package format="2">
  <name>str1ker</name>
  <version>1.0.0</version>
  <description>Str1ker drumming robot</description>
  <maintainer email="valeriy.novytskyy@outlook.com">Valeriy Novytskyy</maintainer>
  <license>GNU GPLv3</license>
  <url type="website">https://www.01binary.us/projects/drumming-robot/</url>
  <author email="valeriy.novytskyy@outlook.com">Valeriy Novytskyy</author>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>angles</depend>
  <depend>genmsg</depend>
  <depend>std_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>controller_manager</depend>
  <depend>yaml-cpp</depend>
  <depend>eigen</depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>actionlib</exec_depend>
</package>
